@startuml
skinparam shadowing false

enum BenchmarkType{
  +CPU
  +MEM
  +STARTUP
}

interface IJSONResult{
  +framework : string
  +benchmark : string
  +type : string
  +min : number
  +max : number
  +mean : number
  +geometricMean : number
  +standardDeviation : number
  +median : number
  +values : number[]
}

interface IFrameworkData{
  +name : string
  +fullNameWithVersion : string
  +uri : string
  +useShadowRoot : boolean
}

interface IResult{
  +framework : IFrameworkData
  +results : T[]
  +benchmark : Benchmark
}

interface IBenchmarkInfo{
  +id : string
  +type : BenchmarkType
  +label : string
  +description : string
  +throttleCPU : number
}

class Benchmark{
  +id : string
  +type : BenchmarkType
  +label : string
  +description : string
  +throttleCPU : number
  +construct(benchmarkInfo: IBenchmarkInfo)
  +init(driver: WebDriver, framework: IFrameworkData): Promise<any>
  +run(driver: WebDriver, framework: IFrameworkData): Promise<any>
  +after(driver: WebDriver, framework: IFrameworkData)
  +resultKinds(): IBenchmarkInfo[]
  +extractResult(results: any[], resultKind: IBenchmarkInfo): number[]
}

IResult --> IFrameworkData
IResult --> Benchmark
IBenchmarkInfo --> BenchmarkType
Benchmark --> BenchmarkType
@enduml
